Geometry overlaps axis selector #65689

Closed
opened 2019-06-10 13:23:32 +02:00 by Michael Soluyanov · 5 comments

System Information
Operating system: Linux-4.15.0-51-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-06 23:23, hash: aa003c7324
Worked: 2.79

Short description of error
Geometry overlaps axis selector (middle mouse button). In 2.79 axis are visible:
Peek 2019-06-10 14-18.gif
in 2.80 not:
Peek 2019-06-10 14-17.gif

Exact steps for others to reproduce the error
Use any operator (S,R,G) and select axis using MMB.
You can note that in 2.80 axis overlapped by geometry in scene.

**System Information** Operating system: Linux-4.15.0-51-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-06 23:23, hash: `aa003c7324` Worked: 2.79 **Short description of error** Geometry overlaps axis selector (middle mouse button). In 2.79 axis are visible: ![Peek 2019-06-10 14-18.gif](https://archive.blender.org/developer/F7097451/Peek_2019-06-10_14-18.gif) in 2.80 not: ![Peek 2019-06-10 14-17.gif](https://archive.blender.org/developer/F7097454/Peek_2019-06-10_14-17.gif) **Exact steps for others to reproduce the error** Use any operator (S,R,G) and select axis using MMB. You can note that in 2.80 axis overlapped by geometry in scene.
Author
Member

Added subscriber: @crantisz

Added subscriber: @crantisz
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Clément Foucault was assigned by Philipp Oeser 2019-06-11 15:45:11 +02:00
Member

Confirmed.

@fclem: any reason we a drawing this with testing Z?

Confirmed. @fclem: any reason we a drawing this with testing Z?

This issue was referenced by 1dab26afb9

This issue was referenced by 1dab26afb9c8f8e12c3e97a1503f09a4f437e77f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65689
No description provided.