Fix T65689 Geometry overlaps axis selector

It seems that in 2.79 callbacks were drawn with depth test off by default.